src/test/resources/lockss-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: lockss-network-policy
  namespace: lockss
spec:
  podSelector:
    matchLabels:
      service-kind: non-lockss
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {}
    - from:
        - ipBlock:
            cidr: 10.255.0.0/16
      ports:
        - port: 24681
        - port: 24682
        - port: 24602
    - from:
        - ipBlock:
            cidr: "171.67.138.0/24"
      ports:
        - port: 24681
        - port: 24682
        - port: 24602
